Dodato učitavanje Roboto webfonta

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="utf-8">
 	<title>Потврђени случајеви коронавируса у Србији</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 	<div class="mask">
@@ -84,8 +83,8 @@
 			</div><!-- .col.notes -->
 		</div><!-- .row.footer -->
 	</div><!-- .wrapper -->
-
-<!-- <script src="https://code.jquery.com/jquery-3.5.0.slim.min.js"></script> -->
+<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="assets/js/script.min.js"></script>
 </body>
