Dodatno još podataka u poster (o broju dana od ključnih momenata)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		</div><!-- .head -->
 		<div class="row meta">
 			<div class="col">
-				<span class="label date">За датум:</span> <span class="value" data-path="latest.dateTime.date">26.03.2020</span> <span class="label">у</span> <span class="value" data-path="latest.dateTime.time">15:00</span> <span class="sep">|</span> <span class="label">тестирано:</span> <span class="value" data-path="latest.details.totalTested">16</span> <span class="sep">|</span> <span class="label">позитивно:</span> <span class="value" data-path="latest.details.positive">0</span> <span class="sep">|</span> <span class="label">негативно:</span> <span class="value" data-path="latest.details.negative">16</span> <span class="sep">|</span> <span class="label">преминуло:</span> <span class="value" data-path="latest.details.fatal">0</span> <small>(<span data-path="latest.details.fatalM">0</span>м+<span data-path="latest.details.fatalF">0</span>ж)</small>
+				<span class="label date">За датум:</span> <span class="value" data-path="latest.dateTime.date">26.03.2020</span> <span class="label">у</span> <span class="value" data-path="latest.dateTime.time">15:00</span> <span class="sep">|</span> <span class="label">тестирано:</span> <span class="value" data-path="latest.details.totalTested">16</span> <span class="sep">|</span> <span class="label">позитивно:</span> <span class="value" data-path="latest.details.positive">0</span> <span class="sep">|</span> <span class="label">негативно:</span> <span class="value" data-path="latest.details.negative">16</span> <span class="sep">|</span> <span class="label">преминуло:</span> <span class="value" data-path="latest.details.fatal">0</span> <small>(<span data-path="latest.details.fatalM">0</span>м+<span data-path="latest.details.fatalF">0</span>ж)</small><br />
+				<span class="label date">Број дана од:</span> <span class="label start">почетак пандемије:</span> <span class="value" data-name="days.start">0</span> <span class="sep">|</span> <span class="label p0">први потврђен случај:</span> <span class="value" data-name="days.p0">0</span> <span class="sep">|</span> <span class="label">уведено ванредно стање:</span> <span class="value" data-name="days.vs">0</span> <span class="sep">|</span> <span class="label">први смртни случај:</span> <span class="value" data-name="days.f0">0</span>
 			</div>
 		</div><!-- .meta -->
 
@@ -86,6 +87,7 @@
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="assets/js/script.min.js"></script>
 </body>
 </html>
