--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</div><!-- .head -->
 		<div class="row meta">
 			<div class="col">
-				<span class="label date">За датум:</span> <span class="value" data-path="latest.dateTime.date">26.03.2020</span> <span class="label">у</span> <span class="value" data-path="latest.dateTime.time">15:00</span> <span class="sep">|</span> <span class="label">тестирано:</span> <span class="value" data-path="latest.details.totalTested">16</span> <span class="sep">|</span> <span class="label">позитивно:</span> <span class="value" data-path="latest.details.positive">0</span> <span class="sep">|</span> <span class="label">негативно:</span> <span class="value" data-path="latest.details.negative">16</span> <span class="sep">|</span> <span class="label">преминуло:</span> <span class="value" data-path="latest.details.fatal">0</span> <small>(<span data-path="latest.details.fatalM">0</span>м+<span data-path="latest.details.fatalF">0</span>ж)</small>
+				<span class="label date">За датум:</span> <span class="value" data-path="latest.dateTime.date">26.03.2020</span> <span class="label">у</span> <span class="value" data-path="latest.dateTime.time">15:00</span> <span class="sep">|</span> <span class="label">тестирано:</span> <span class="value" data-path="latest.details.totalTested">16</span> <span class="sep">|</span> <span class="label">позитивно:</span> <span class="value" data-path="latest.details.positive">0</span> <span class="sep">|</span> <span class="label">негативно:</span> <span class="value" data-path="latest.details.negative">16</span> <span class="sep">|</span> <span class="label">излечено:</span> <span class="value" data-path="latest.details.recovered">0</span> <span class="sep">|</span> <span class="label">преминуло:</span> <span class="value" data-path="latest.details.fatal">0</span>
 			</div><!-- .col -->
 		</div><!-- .meta -->
 		<div class="row meta meta-days">
@@ -32,8 +32,8 @@
 					<div class="value" data-path="latest.totals.tested">0</div>
 				</div><!-- .stat -->
 				<div class="stat stat-sm">
-					<div class="label">укупно <br />хоспитализовано</div>
-					<div class="value" data-path="latest.totals.hospitalized">0</div>
+					<div class="label">укупно <br />излечено <i>*</i></div>
+					<div class="value" data-path="latest.totals.recovered">0</div>
 				</div><!-- .stat -->
 			</div><!-- .col.holder -->
 			<div class="col col-6 total">
@@ -44,12 +44,12 @@
 			</div><!-- .total -->
 			<div class="col col-3 col-vert holder">
 				<div class="stat stat-sm">
-					<div class="label">однос<br /> заражених <i>*</i></div>
+					<div class="label">однос<br /> заражених <i>**</i></div>
 					<div class="value" data-path="latest.totals.caseP">0</div>
 				</div><!-- .stat -->
 				<div class="stat stat-sm">
-					<div class="label">однос<br /> преминулих <i>*</i></div>
-					<div class="value" data-path="latest.totals.fatalP">0</div>
+					<div class="label">укупно на <br />респиратору</div>
+					<div class="value" data-path="latest.totals.ventilator">0</div>
 				</div><!-- .stat -->
 			</div><!-- .col.holder -->
 		</div><!-- .row.hero -->
@@ -58,40 +58,41 @@
 
 		<div class="row stats">
 			<div class="col col-3 stat stat-md">
-				<div class="label">укупно активних <br />случајева <i>**</i></div>
+				<div class="label">укупно активних <br />случајева <i>***</i></div>
 				<div class="value" data-path="latest.totals.active">0</div>
 			</div><!-- .stat -->
 			<div class="col col-3 stat stat-md">
-				<div class="label">укупно на <br />респиратору</div>
-				<div class="value" data-path="latest.totals.ventilator">0</div>
-			</div><!-- .stat -->
-			<div class="col col-3 stat stat-md">
-				<div class="label">укупно <br />излечено <i>***</i></div>
-				<div class="value" data-path="latest.totals.recovered">0</div>
+				<div class="label">однос активних <br />случајева <i>****</i></div>
+				<div class="value" data-path="latest.totals.activeP">0</div>
 			</div><!-- .stat -->
 			<div class="col col-3 stat stat-md">
 				<div class="label">укупно <br />преминуло</div>
 				<div class="value" data-path="latest.totals.fatal">0</div>
 			</div><!-- .stat -->
+			<div class="col col-3 stat stat-md">
+				<div class="label">однос<br /> преминулих <i>**</i></div>
+				<div class="value" data-path="latest.totals.fatalP">0</div>
+			</div><!-- .stat -->
 		</div><!-- .row.stats -->
 
 		<div class="row row-space"></div><!-- .row-space -->
 
-		<div class="row footer">
+		<div class="row footer va-start">
 			<div class="col col-4 source">
-				<span class="label">Извор:</span> <a href="https://github.com/urosevic/covid19" target="_blank">github.com/urosevic/covid19</a> <br /><span class="label hide">Извор:</span> <a href="https://bit.ly/covid19-srbija" target="_blank">bit.ly/covid19-srbija</a>
+				<span class="label">Извор:</span> <a href="https://github.com/urosevic/covid19" target="_blank">github.com/urosevic/covid19</a> <br /><span class="label hide">Извор:</span> <a href="https://bit.ly/covid19-srbija" target="_blank">bit.ly/covid19-srbija</a><br />
 			</div><!-- .col.source -->
 			<div class="col col-8 notes">
-				<i><span>**</span>*</i> У односу на укупан број тестираних<br />
-				<i><span>*</span>**</i> <strong>Извор:</strong> <span name="izvor" data-path="latest.info.refs">...</span><br />
-				<i>***</i> Израчунава се као разлика између укупног броја заражених и збира преминулих и активних<br />
+				<i><span>***</span>*</i> Израчунава се као разлика између укупног броја заражених и збира преминулих и активних<br />
+				<i><span>**</span>**</i> У односу на укупан број тестираних<br />
+				<i><span>*</span>***</i> <strong>Извор:</strong> <span name="izvor" data-path="latest.info.refs">...</span><br />
+				<i><span></span>****</i> У односу на укупан број заражених<br />
 			</div><!-- .col.notes -->
 		</div><!-- .row.footer -->
 	</div><!-- .wrapper -->
-<link rel="stylesheet" type="text/css" href="assets/css/style.css?v=20200624">
+<link rel="stylesheet" type="text/css" href="assets/css/style.css?v=20200704">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-<script src="assets/js/script.min.js?v=20200624"></script>
+<script src="assets/js/script.min.js?v=20200704"></script>
 </body>
 </html>
