Unificiran data atribut data-path (uklonjen data-name) u posteru

--- a/index.html
+++ b/index.html
@@ -14,12 +14,23 @@
 		</div><!-- .head -->
 		<div class="row meta">
 			<div class="col">
-				<span class="label date">За датум:</span> <span class="value" data-path="latest.dateTime.date">26.03.2020</span> <span class="label">у</span> <span class="value" data-path="latest.dateTime.time">15:00</span> <span class="sep">|</span> <span class="label">тестирано:</span> <span class="value" data-path="latest.details.totalTested">16</span> <span class="sep">|</span> <span class="label">позитивно:</span> <span class="value" data-path="latest.details.positive">0</span> <span class="sep">|</span> <span class="label">негативно:</span> <span class="value" data-path="latest.details.negative">16</span> <span class="sep">|</span> <span class="label">излечено:</span> <span class="value" data-path="latest.details.recovered">0</span> <span class="sep">|</span> <span class="label">преминуло:</span> <span class="value" data-path="latest.details.fatal">0</span>
+				<span class="label date">За датум:</span>
+				<span class="value" data-path="latest.dateTime.date">26.03.2020</span> <span class="label">у</span> <span class="value" data-path="latest.dateTime.time">15:00</span>
+				<span class="sep">|</span> <span class="label">тестирано:</span> <span class="value" data-path="latest.details.totalTested">16</span>
+				<span class="sep">|</span> <span class="label">позитивно:</span> <span class="value" data-path="latest.details.positive">0</span>
+				<span class="sep">|</span> <span class="label">негативно:</span> <span class="value" data-path="latest.details.negative">16</span>
+				<span class="sep">|</span> <span class="label">излечено:</span> <span class="value" data-path="latest.details.recovered">0</span>
+				<span class="sep">|</span> <span class="label">преминуло:</span> <span class="value" data-path="latest.details.fatal">0</span>
 			</div><!-- .col -->
 		</div><!-- .meta -->
 		<div class="row meta meta-days">
 			<div class="col">
-				<span class="label date">Број дана од:</span> <span class="label start">почетак пандемије:</span> <span class="value" data-name="days.start">0</span> <span class="sep">|</span> <span class="label p0">први потврђен случај:</span> <span class="value" data-name="days.p0">0</span> <span class="sep">|</span> <span class="label">уведено ванредно стање:</span> <span class="value" data-name="days.vs">0</span> <span class="sep">|</span> <span class="label">први смртни случај:</span> <span class="value" data-name="days.f0">0</span> <span class="sep">|</span> <span class="label">укинуто ванредно стање:</span> <span class="value" data-name="days.uvs">0</span>
+				<span class="label date">Број дана од:</span>
+				<span class="label start">почетак пандемије:</span> <span class="value" data-path="days.start">0</span>
+				<span class="sep">|</span> <span class="label p0">први потврђен случај:</span> <span class="value" data-path="days.p0">0</span>
+				<span class="sep">|</span> <span class="label">уведено ванредно стање:</span> <span class="value" data-path="days.vs">0</span>
+				<span class="sep">|</span> <span class="label">први смртни случај:</span> <span class="value" data-path="days.f0">0</span>
+				<span class="sep">|</span> <span class="label">укинуто ванредно стање:</span> <span class="value" data-path="days.uvs">0</span>
 			</div>
 		</div><!-- .meta-days -->
 
