Ispravljena kalkulacija odnosa aktivnih slučajeva na posteru

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			</div><!-- .total -->
 			<div class="col col-3 col-vert holder">
 				<div class="stat stat-sm">
-					<div class="label">однос<br /> заражених <i>**</i></div>
+					<div class="label">однос<br /> заражених <i>***</i></div>
 					<div class="value" data-path="latest.totals.caseP">0</div>
 				</div><!-- .stat -->
 				<div class="stat stat-sm">
@@ -69,7 +69,7 @@
 
 		<div class="row stats">
 			<div class="col col-3 stat stat-md">
-				<div class="label">укупно активних <br />случајева <i>***</i></div>
+				<div class="label">укупно активних <br />случајева <i>**</i></div>
 				<div class="value" data-path="latest.totals.active">0</div>
 			</div><!-- .stat -->
 			<div class="col col-3 stat stat-md">
@@ -77,11 +77,11 @@
 				<div class="value" data-path="latest.totals.activeP">0</div>
 			</div><!-- .stat -->
 			<div class="col col-3 stat stat-md">
-				<div class="label">укупно <br />преминуло</div>
+				<div class="label">укупно <br />преминуло <i>**</i></div>
 				<div class="value" data-path="latest.totals.fatal">0</div>
 			</div><!-- .stat -->
 			<div class="col col-3 stat stat-md">
-				<div class="label">однос<br /> преминулих <i>**</i></div>
+				<div class="label">однос<br /> преминулих <i>****</i></div>
 				<div class="value" data-path="latest.totals.fatalP">0</div>
 			</div><!-- .stat -->
 		</div><!-- .row.stats -->
@@ -94,8 +94,8 @@
 			</div><!-- .col.source -->
 			<div class="col col-8 notes">
 				<i><span>***</span>*</i> Израчунава се као разлика између укупног броја заражених и збира преминулих и активних<br />
-				<i><span>**</span>**</i> У односу на укупан број тестираних<br />
-				<i><span>*</span>***</i> <strong>Извор:</strong> <span name="izvor" data-path="latest.info.refs">...</span><br />
+				<i><span>**</span>**</i> <strong>Извор:</strong> <span name="izvor" data-path="latest.info.refs">...</span><br />
+				<i><span>*</span>***</i> У односу на укупан број тестираних<br />
 				<i><span></span>****</i> У односу на укупан број заражених<br />
 			</div><!-- .col.notes -->
 		</div><!-- .row.footer -->
